--- a/ncollide_pipeline/Cargo.toml
+++ b/ncollide_pipeline/Cargo.toml
@@ -17,7 +17,22 @@ path = "lib.rs"
 [dependencies]
 rustc-serialize = "*"
 nalgebra = "*"
-ncollide_math = "*"
-ncollide_utils = "*"
-ncollide_entities = "*"
-ncollide_queries = "*"
+#ncollide_math = "*"
+#ncollide_utils = "*"
+#ncollide_entities = "*"
+#ncollide_queries = "*"
+
+
+# Just for demo link purpose!
+
+[dependencies.ncollide_math]
+path = "../ncollide_math"
+
+[dependencies.ncollide_utils]
+path = "../ncollide_utils"
+
+[dependencies.ncollide_entities]
+path = "../ncollide_entities"
+
+[dependencies.ncollide_queries]
+path = "../ncollide_queries"
