--- a/ncollide_entities/Cargo.toml
+++ b/ncollide_entities/Cargo.toml
@@ -18,5 +18,14 @@ path = "lib.rs"
 rustc-serialize = "*"
 num = "*"
 nalgebra = "*"
-ncollide_math = "*"
-ncollide_utils = "*"
+#ncollide_math = "*"
+#ncollide_utils = "*"
+
+
+# Just for demo link purpose!
+
+[dependencies.ncollide_math]
+path = "../ncollide_math"
+
+[dependencies.ncollide_utils]
+path = "../ncollide_utils"
