--- a/ncollide_utils/Cargo.toml
+++ b/ncollide_utils/Cargo.toml
@@ -20,4 +20,10 @@ rustc-serialize = "*"
 rand = "*"
 num = "*"
 nalgebra = "*"
-ncollide_math = "*"
+#ncollide_math = "*"
+
+
+# Just for demo link purpose!
+
+[dependencies.ncollide_math]
+path = "../ncollide_math"
